Fix script execution when a render frame swaps hosts

This change fixes an issue where navigating between pages in a way
that triggers a RenderFrameHost swap would stop script execution
for the DocumentReady and Deferred injection points.

Fixed by adding scripts on RenderFrameHost changes after we have
removed scripts from the old host. This restores an old behavior of
double addition which the already handle later.

Fixes: QTBUG-131156
Change-Id: I8b7bb2d456224dce7ccc405bf2f68f103d3d0332
Reviewed-by: Szabolcs David <davidsz@inf.u-szeged.hu>
(cherry picked from commit 6c8fe2667ae79cb4efc092ca73e85849a84aeaf2)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>